tooling/nargo_cli/tests/snapshots/execution_failure/zero_length_array_set_out_of_bounds/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds, array has size 4, but index was 4
  ┌─ src/main.nr:3:5
  │
3 │     slots[idx] = [];
  │     ----------
  │
  = Call stack:
    1: main
            at src/main.nr:3:5

Failed assertion
