tooling/nargo_cli/tests/snapshots/execution_failure/zero_length_array_set_out_of_bounds/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 4 is out of bounds for the array of length 4
  ┌─ src/main.nr:3:5
  │
3 │     slots[idx] = [];
  │     ----------
  │

Error interpreting main function
